# obsmet

./: README.md  mkdocs.yml  pyproject.toml
docs/: cli_reference.md  gdas.md  ghcnd.md  ghcnh.md  index.md  isd.md  ndbc.md  overview.md  raws.md  snotel.md
docs/madis/: index.md  qaqc.md  workflow.md
obsmet/cli/: main.py
obsmet/config/: defaults.toml
obsmet/config/sources/: gdas_prepbufr.toml  isd.toml  madis.toml  ndbc.toml  raws_wrcc.toml
obsmet/core/: manifest.py  provenance.py  schema.py  time_policy.py  units.py
obsmet/crosswalk/: audit.py  builder.py  matchers.py  precedence.py  station_index.py
obsmet/products/: correction_factors.py  daily.py  fabric.py  hourly.py  humidity.py  release.py  rsun.py  station_por.py
obsmet/qaqc/engines/: pipeline.py
obsmet/qaqc/rules/: base.py  bounds.py  gdas.py  isd.py  madis.py  ndbc.py  temporal.py
obsmet/sources/: base.py  registry.py
obsmet/sources/eccc/: adapter.py
obsmet/sources/gdas_prepbufr/: adapter.py  download.py  extract.py
obsmet/sources/ghcnd/: adapter.py
obsmet/sources/ghcnh/: adapter.py  download.py
obsmet/sources/isd/: adapter.py  download.py  extract.py
obsmet/sources/madis/: adapter.py  download.py  extract.py
obsmet/sources/ndbc/: adapter.py  (+2 more)
obsmet/validation/: agweather.py
scripts/: cron_update.sh
tests/integration/: ingest_test_data.py  test_all_sources.py
tests/unit/: test_crosswalk.py  test_daily.py  test_daily_engine.py  test_gdas.py  test_isd.py  test_madis.py  test_ndbc.py  test_qaqc.py  test_raws.py  test_registry.py  test_release.py  test_station_por.py
(+5 files in other folders)
