[project]
name = "obsmet"
version = "0.1.0"
description = "Unified meteorological observation ingest, standardization, QAQC, and provenance."
requires-python = "==3.13.*"

dependencies = [
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "pyarrow>=20.0.0",
    "click>=8.1.0",
    "tomli-w>=1.2.0",
    "xarray>=2026.1.0",
    "netcdf4>=1.7.4",
    "eccodes>=2.46.0",
    "rasterio>=1.5.0",
    "agweatherqaqc @ file:///home/dgketchum/code/agweather-qaqc",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
obsmet = "obsmet.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
